Flex item's min size doesn't transfer to the opposite axis though aspect-ratio
Categories
(Core :: Layout, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox101 | --- | verified |
People
(Reporter: TYLin, Assigned: boris)
References
(Blocks 1 open bug, )
Details
Attachments
(2 files, 2 obsolete files)
Load the attached testcase.
Google Chrome has the flex item of size 100x100, where we have 0x100.
I suppose the flex item's min-height:100px
should be transferred to the inline axis through aspect-ratio
per https://drafts.csswg.org/css-sizing-4/#aspect-ratio-size-transfers
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
So we can reuse this function in the next patch.
Assignee | ||
Comment 2•3 years ago
|
||
nsIFrame::ComputeSize() skip this case for flex items if the main axis
is the inline axis. Basically, flex items ignore their min & max sizing
properties in nsIFrame::ComputeSize() and we apply them later in the
flex reflow algorithm. Therefore, we also have to apply the transferred
min/max sizes together with its min & max sizing properties.
Assignee | ||
Comment 3•3 years ago
|
||
Basically, the transferred min & max sizes shouldn't override the min &
max sizing properties, so applying it earilier than these properties
should be identical. This just makes the flex base size ane main size be
more correct at the beginning (and so other adjustments of min/max sizes
in flex algorithm should override the transferred min/max sizes).
Assignee | ||
Comment 4•3 years ago
|
||
Based on https://github.com/w3c/csswg-drafts/issues/6071#issuecomment-801338121:
So after discussing with fantasai, the css-sizing-4 transferred min/max size text should not apply in flexbox/grid. Instead, only the sizing inside those specs should apply.
Chrome and Safari still apply the transferred min/max size, but looks like we may not have to do this based on the spec issue comment.
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Reproducible on Firefox 100.0(20220428192727) on Windows 10 64-bits. Verified as fixed on Firefox 101.0b8(20220517185920) and Nightly 102.0a1(20220518214245) on Windown 10 64-bits, macOS 11 and Ubuntu 20.04
Description
•